--- a/src/lz-ui/index.html
+++ b/src/lz-ui/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head>
+    <link data-trunk rel="tailwind-css" href="src/tailwind.css">
+  </head>
   <body></body>
 </html>
